<resources>
    <string name="app_name">TestForVass</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="brastlewark">Brastlewark</string>
    <string name="here_all">Here all: </string>
    <string name="name">Name: </string>
    <string name="id">ID: </string>
    <string name="age">Age: </string>
    <string name="weight">Weight:</string>
    <string name="height">Height:</string>
    <string name="hair_color">Hair Color:</string>
    <string name="professions">Professions:</string>
    <string name="friends">Friends:</string>
</resources>